# 2d-rt

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
docs/: path_family_grid_sbr_design.md  radiomapseer_partition_strategy.md
include/rt2d/: c_scene.h  raytrace.h
python/examples/: compare_path_family_partition_to_gain.py  compare_radiomapseer_feature_maps.py  demo.py  evaluate_partition_batch.py  extract_boundaries.py  extract_rx_visibility.py  generate_radiomapseer_los_dataset.py  generate_radiomapseer_physics_boundary_dataset.py  preview_path_family_los_r.py  visualize_boundaries.py  visualize_rx_visibility.py
python/rt2d/: __init__.py  boundary.py  coverage.py  loader.py  scene.py
python/rt2d/path_family/: __init__.py  api.py  runtime.py  types.py
scripts/: build.ps1
src/c/: c_scene.c
src/cpp/: ops.cpp  raytrace_cpu.cpp
src/cuda/: raytrace_cuda.cu
tests/: test_boundaries.py  test_coverage.py
